interim replace SkyVm

--- a/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
+++ b/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
@@ -15,7 +15,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -25,6 +25,8 @@
       debugServiceExtension = "internal"
       enableGPUFrameCaptureMode = "1"
       enableGPUShaderValidationMode = "2"
+      showGraphicsOverview = "Yes"
+      logGraphicsOverview = "Yes"
       allowLocationSimulation = "YES"
       allowDeviceSensorReplayData = "YES"
       consoleMode = "0"
