--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ fastlane/test_output
 ## Other
 
 ### Xcode Patch ###
+DeepMuse.xcworkspace/
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
