--- a/DeepMuse.entitlements
+++ b/DeepMuse.entitlements
@@ -3,16 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>com.apple.developer.icloud-container-identifiers</key>
-	<array>
-		<string>iCloud.com.DeepMuse</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.icloud-services</key>
-	<array>
-		<string>CloudDocuments</string>
-	</array>
-	<key>com.apple.developer.ubiquity-container-identifiers</key>
-	<array>
-		<string>iCloud.com.DeepMuse</string>
-	</array>
+	<array/>
 </dict>
 </plist>
