--- a/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
+++ b/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
@@ -31,9 +31,10 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      enableASanStackUseAfterReturn = "YES"
       disableMainThreadChecker = "YES"
       disablePerformanceAntipatternChecker = "YES"
       launchStyle = "0"
