--- a/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
+++ b/DeepMuse.xcodeproj/xcshareddata/xcschemes/DeepMuse.xcscheme
@@ -78,7 +78,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
